digdag_study/digdag_kube/digdag-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digdag-worker
spec:
  replicas: 5
  selector:
    matchLabels:
      app: digdag-worker
  template:
    metadata:
      labels:
        app: digdag-worker
    spec:
      containers:
      - name: digdag-worker
        image: brubian/digdag-worker
        ports:
        - containerPort: 65432
        volumeMounts:
          - name: analytics-credentials
            mountPath: /secrets
            readOnly: true
      volumes:
        - name: analytics-credentials
          secret:
            secretName: analytics-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: digdag-worker-svc
spec:
  selector:
    app: digdag-worker
  ports:
    - port: 61000
      targetPort: 65432
      protocol: TCP

  type: ClusterIP
